With UMMISCO background

--- a/example.tex
+++ b/example.tex
@@ -1,4 +1,4 @@
-% Created 2017-02-16 Thu 11:46
+% Created 2017-02-16 Thu 12:04
 % Intended LaTeX compiler: xelatex
 \documentclass[presentation]{beamer}
 \usepackage{graphicx}
@@ -12,7 +12,7 @@
 \usepackage{amssymb}
 \usepackage{capt-of}
 \usepackage{hyperref}
-\usetheme{intridea}
+\usetheme{UMMISCO}
 \author{Author}
 \date{\today}
 \title{Title of my talk}
@@ -32,9 +32,9 @@
 
 
 \section{Slide 1}
-\label{sec:orga9177ea}
+\label{sec:orgd5b5a53}
 
-\begin{frame}[label={sec:orgf51fb0d}]{Slide 1}
+\begin{frame}[label={sec:orgf63130f}]{Slide 1}
 A science committed to a sustainable future
 \end{frame}
 \end{document}
