--- a/beamerthemeUMMISCO.sty
+++ b/beamerthemeUMMISCO.sty
@@ -22,7 +22,7 @@
 \setbeamerfont{framenumber in head/foot}{size=\Tiny}
 
 \setbeamertemplate{background canvas}{\includegraphics
-	[width=\paperwidth,height=\paperheight]{background.png}}
+	[width=\paperwidth,height=\paperheight]{backgroundUMMISCO.png}}
 \setbeamertemplate{frametitle}[default][center]
 \setbeamertemplate{navigation symbols}{} %no nav symbols
 
