--- a/example.org
+++ b/example.org
@@ -5,7 +5,7 @@
 #+startup: beamer
 #+LATEX_CLASS: beamer
 #+LATEX_CLASS_OPTIONS: [presentation]
-#+BEAMER_THEME: intridea
+#+BEAMER_THEME: UMMISCO
 #+COLUMNS: %45ITEM %10BEAMER_ENV(Env) %10BEAMER_ACT(Act) %4BEAMER_COL(Col) %8BEAMER_OPT(Opt)
 
 * Slide 1
