--- a/example.tex
+++ b/example.tex
@@ -1,4 +1,4 @@
-% Created 2017-02-16 Thu 12:04
+% Created 2017-02-17 Fri 16:30
 % Intended LaTeX compiler: xelatex
 \documentclass[presentation]{beamer}
 \usepackage{graphicx}
@@ -32,9 +32,9 @@
 
 
 \section{Slide 1}
-\label{sec:orgd5b5a53}
+\label{sec:org7d01809}
 
-\begin{frame}[label={sec:orgf63130f}]{Slide 1}
+\begin{frame}[label={sec:org7ace24f}]{Slide 1}
 A science committed to a sustainable future
 \end{frame}
 \end{document}
